[gd_scene load_steps=5 format=3 uid="uid://digfx032tves5"]

[ext_resource type="Texture2D" uid="uid://wg8w3bot0wal" path="res://icon.svg" id="1_442mt"]
[ext_resource type="Script" path="res://Scenes/pedestrian.gd" id="1_rrmj4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ufy58"]
size = Vector2(15.619, 6.73469)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m3q4u"]
size = Vector2(17.5794, 8.97959)

[node name="Pedestrian" type="CharacterBody2D"]
scale = Vector2(2.1, 4.9)
collision_layer = 2
script = ExtResource("1_rrmj4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(10.4762, 3.46939)
scale = Vector2(0.142411, 0.057398)
texture = ExtResource("1_442mt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9.80952, 3.36735)
shape = SubResource("RectangleShape2D_ufy58")

[node name="MovementTimer" type="Timer" parent="."]

[node name="CarDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CarDetector"]
position = Vector2(10.0714, 3.06122)
scale = Vector2(1.2, 1)
shape = SubResource("RectangleShape2D_m3q4u")

[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="body_entered" from="CarDetector" to="." method="_on_car_detector_body_entered"]
